* Fixed: error toast had grey content background instead of red * Close button in error toast now right-aligned

--- a/client/src/main/resources/tic-tac-toe.css
+++ b/client/src/main/resources/tic-tac-toe.css
@@ -6,7 +6,7 @@
     transform: translate(-50%, -50%);
 }
 
-md-toast[md-theme="error"] {
+md-toast[md-theme="error"] .md-toast-content {
     background-color: #F44336;
 }
 
